# grassfire2

./: README.md  demo.ipynb  pyproject.toml
.github/workflows/: main.yml
benchmarks/: benchmark.py  benchmark_micycle.py
src/grassfire2/: __init__.py  adapters.py  api.py  collapse.py  init.py  linalg.py  line.py  mesh.py  model.py  tolerances.py  topology.py  transform.py
src/grassfire2/events/: loop.py  ordering.py  queue.py
src/grassfire2/events/handlers/: edge.py  flip.py  lib.py  parallel.py  split.py
src/grassfire2/triangulation/: __init__.py  normalize.py  shapely_adapter.py  tri_adapter.py
tests/integration/: skeleton_test.py
tests/unit/: adapters_shapely_test.py  api_input_test.py
