[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grassfire2"

version = "0.1.dev0"
description = "Straight skeleton by means of kinetic triangulation"
readme = "README.md"
license = "MIT"
authors = [
  { name = "Michael Carleton", email = "micycle1@hotmail.co.uk" }
]
requires-python = ">=3.12"
dependencies = [
  "predicates @ git+https://github.com/micycle1/predicates/",
  "tri @ git+https://github.com/micycle1/tri",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage    = "https://github.com/micycle1/grassfire"
Repository  = "https://github.com/micycle1/grassfire.git"

[dependency-groups]
test = [
  "pytest >=8.3",
  "requests >=2.32",
  "matplotlib >=3.7",
]

dev = [
  "ipykernel >=6.29",
  "grassfire2[test]",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/grassfire2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
